# Gobject-tutorial

./: .gitignore  Rakefile  Readme.md  sec5.md
docs/: index.html  sec1.html  sec2.html  sec3.html  sec4.html  sec5.html  sec6.html  sec7.html  sec8.html  sec9.html
gfm/: sec1.md  sec2.md  sec3.md  sec4.md  sec5.md  sec6.md  sec7.md  sec8.md  sec9.md
image/: chainup.xcf  chainup3.xcf  class_instance.xcf  class_property1.xcf  finalize.xcf  state_diagram.xcf  tintclass_init.xcf  tnumberclass_init.xcf
lib/: lib_add_head_tail_html.rb  lib_gen_main_tex.rb  lib_mk_html_template.rb
src/: abstract.src.md  sec1.src.md  sec2.src.md  sec3.src.md  sec4.src.md  sec5.src.md  sec6.src.md  sec7.src.md  sec8.src.md  sec9.src.md
src/misc/: example1.c  example2.c  example3.c  example4.c  example5.c  meson.build  toupper1.c  toupper2.c  typename.c
src/tcomparable/: dec.h  dec2.h  def.c  def2.c  main.c  main_without_macro.c  meson.build  tcomparable.c  tcomparable.h  tcomparable_without_macro.c  tcomparable_without_macro.h  tdouble.c  tdouble_without_macro.c  tint.c  tint.h  tint_without_macro.c  tnumber.c  tnumber.h  tnumstr.c  tnumstr.h  tstr.c  tstr.h  tstr_without_macro.c
src/tdouble1/: main.c  meson.build  tdouble.c  tdouble.h
src/tdouble2/: main.c  meson.build  tdouble.c  tdouble.h
src/tdouble3/: main.c  tdouble.c
src/tdouble4/: main.c  tdouble.c
src/tdouble5/: main.c  tdouble.c
src/tdouble6/: main.c  tdouble.c  tdouble.h
src/tint/: main.c  meson.build  tint.c  tint.h
src/tnumber/: main.c  meson.build  tdouble.c  tdouble.h  tint.c  tint.h  tnumber.c  tnumber.h  tnumber.prep.c
src/tptr/: main.c  meson.build  tptr.c  tptr.h
src/tstr/: main.c  meson.build  test1.c  test2.c  tnumstr.c  tnumstr.h  tstr.c  tstr.h
src/tstring/: main.c  meson.build  tstr.c  tstr.h
