project ('misc', 'c')

gobjdep = dependency('gobject-2.0')

executable('example1', 'example1.c', dependencies: gobjdep, install: false)
executable('example2', 'example2.c', dependencies: gobjdep, install: false)
executable('example3', 'example3.c', dependencies: gobjdep, install: false)
executable('example4', 'example4.c', dependencies: gobjdep, install: false)
executable('example5', 'example5.c', dependencies: gobjdep, install: false)
executable('typename', 'typename.c', dependencies: gobjdep, install: false)
executable('toupper1', 'toupper1.c', dependencies: gobjdep, install: false)
executable('toupper2', 'toupper2.c', dependencies: gobjdep, install: false)

